--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -721,11 +721,14 @@ svg {
     padding-block: 1.5rem;
   }
 
-  .contact__container{
+  .contact__container {
     padding: 0.4rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     justify-content: center;
-
   }
+  
   .contact__button{
     
     justify-content: center;
