--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -723,15 +723,14 @@ svg {
 
   .contact__container {
     padding: 0.4rem;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
     justify-content: center;
+    
   }
   
-  .contact__button{
-    
-    justify-content: center;
+  .contact__button {
+    display: block;
+    margin: 0 auto;
+    text-align: center;
   }
   
 
